--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -104,4 +104,14 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+body {
+  color: #14181b
+}
+
+.container {
+  background-color: #14181b;
+  max-width: 100vw;
+  overflow-x: hidden;
+
 }
