--- a/src/styles/glitch.css
+++ b/src/styles/glitch.css
@@ -1,51 +1,115 @@
 /* === Base Glitch Styles === */
-.glitch,
-.glitch-hover {
+.glitch {
     position: relative;
+    font-weight: 900;
     line-height: 1.2;
     letter-spacing: 2px;
+    animation: glitch 1s linear infinite;
 }
 
-.glitch::before,
-.glitch::after,
-.glitch-hover::before,
-.glitch-hover::after {
+.glitch:before,
+.glitch:after {
     content: attr(data-text);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
-    z-index: -1;
 }
 
-.glitch::before,
-.glitch-hover::before {
+.glitch:before {
+    animation: glitch-top 1s linear infinite;
     clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-    color: #ff00c1;
 }
 
-.glitch::after,
-.glitch-hover::after {
+.glitch:after {
+    animation: glitch-bottom 1.5s linear infinite;
     clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
     -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-    color: #00fff9;
-    z-index: -2;
 }
 
-/* === Continuous Animation === */
 .glitch {
+    position: relative;
+    color: #fff;
     animation: glitch 1s linear infinite;
 }
 
-.glitch::before {
-    animation: glitch-top 1s linear infinite;
+.glitch:before,
+.glitch:after {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.glitch::after {
+.glitch:before {
+    animation: glitch-top 1s linear infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    color:
+        #ff00c1;
+    z-index: -1;
+}
+
+.glitch:after {
     animation: glitch-bottom 1.5s linear infinite;
+    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    color:
+        #00fff9;
+    z-index: -2;
+}
+
+@keyframes glitch {
+
+    2%,
+    64% {
+        transform: translate(2px, 0) skew(0deg);
+    }
+
+    4%,
+    60% {
+        transform: translate(-2px, 0) skew(0deg);
+    }
+
+    62% {
+        transform: translate(0, 0) skew(5deg);
+    }
+}
+
+@keyframes glitch-top {
+
+    2%,
+    64% {
+        transform: translate(2px, -2px);
+    }
+
+    4%,
+    60% {
+        transform: translate(-2px, 2px);
+    }
+
+    62% {
+        transform: translate(13px, -1px) skew(-13deg);
+    }
+}
+
+@keyframes glitch-bottom {
+
+    2%,
+    64% {
+        transform: translate(-2px, 0);
+    }
+
+    4%,
+    60% {
+        transform: translate(-2px, 0);
+    }
+
+    62% {
+        transform: translate(-22px, 5px) skew(21deg);
+    }
 }
 
 /* === Hover-triggered Glitch === */
